[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_flow-column-reverse-wrap-reverse.html https://bugs.webkit.org/show_bug.cgi?id=281580

Reviewed by Antti Koivisto.

Add support for logical margin values when cross axis is reversed for column direction.

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.cpp:
(WebCore::Layout::FlexFormattingContext::convertFlexItemsToLogicalSpace):

Canonical link: https://commits.webkit.org/285338@main